<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.abewkayew.serafelagi.ApplyNowForm">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Graduated From"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="20sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="type university"
            android:id="@+id/applier_name"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="GPA"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="20sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:inputType="numberDecimal"
            android:hint="type cumulative grade poing"
            android:id="@+id/applier_grade"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="File Name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"

            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="attach Tempo"
            android:id="@+id/tempo_file"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorWhite"
            android:background="@color/colorCyanDarken"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"/>
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="Apply"
        android:id="@+id/apply"
        android:onClick="submitApplyForm"
        android:background="@color/colorCyanDarken"
        android:textColor="@color/colorWhite"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/recyclerView_apply">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>
